# social-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/mock-common/: Cargo.toml
crates/mock-common/src/: health.rs  lib.rs
crates/social-core/: Cargo.toml
crates/social-core/src/: circuit_breaker.rs  domain.rs  env.rs  http.rs  lib.rs  logging.rs  ports.rs  usecases.rs
docker/postgres/: init.sql
k6/: README.md  batch_counts_1k_rps.js  count_read_10k_rps.js  mixed_traffic.js
openapi/: social-api.openapi.yaml
proto/: README.md
proto/content/v1/: content_catalog.proto
proto/profile/v1/: profile_auth.proto
proto/social_api/v1/: social_api.proto
services/mock-content-api/: Cargo.toml  Dockerfile
services/mock-content-api/src/: app.rs  config.rs  routes.rs  seed.rs  state.rs
services/mock-profile-api/: Cargo.toml  Dockerfile
services/mock-profile-api/src/: app.rs  config.rs  main.rs  routes.rs  seed.rs  state.rs
services/social-api/: Cargo.toml  Dockerfile
services/social-api/migrations/: 0001_init.sql
services/social-api/src/: app.rs  main.rs  state.rs
services/social-api/src/adapters/: mod.rs
services/social-api/src/adapters/http/: error.rs  handlers.rs  mod.rs  types.rs
services/social-api/src/adapters/storage/: mod.rs  pg_leaderboard.rs  pg_like_counts.rs  pg_likes.rs  pg_likes_writer.rs  redis_content_validation.rs  redis_leaderboard_cache.rs  redis_like_counts.rs  redis_like_events.rs  redis_rate_limiter.rs
services/social-api/src/infra/: config.rs  metrics.rs  mod.rs  shutdown.rs
services/social-api/src/middleware/: metrics.rs  mod.rs  rate_limit.rs
services/social-api/tests/: e2e_http.rs
