[workspace]
resolver = "2"
members = [
    "crates/mock-common",
    "crates/social-core",
    "services/mock-content-api",
    "services/mock-profile-api",
    "services/social-api",
]

[workspace.package]
version = "0.6.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
base64 = "0.22.1"
chrono = "0.4.44"
deadpool-redis = "0.23.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.32"
once_cell = "1.21.3"
prometheus = "0.14.0"
redis = "1.0.5"
reqwest = "0.13.2"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = "0.8.6"
thiserror = "2.0.18"
tokio = "1.50.0"
tower = "0.5.3"
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.22.0"
url = "2.5.8"