[package]
name = "social-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
axum = { workspace = true, features = ["macros"] }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "time", "env-filter"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }