[package]
name = "mock-content-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
envy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

mock-common = { path = "../../crates/mock-common" }
social-core = { path = "../../crates/social-core" }