[package]
name = "mock-content-api"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
envy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

mock-common = { path = "../../crates/mock-common" }
social-core = { path = "../../crates/social-core" }