[package]
name = "social-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros"] }
base64 = { workspace = true }
chrono = { workspace = true }
deadpool-redis = { workspace = true }
prometheus = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { workspace = true, features = ["trace", "request-id"] }
tracing = { workspace = true }
uuid = { workspace = true }
url = { workspace = true, features = ["serde"] }

social-core = { path = "../../crates/social-core" }